--- a/index.html
+++ b/index.html
@@ -8,7 +8,26 @@
     <!-- ADICIONAR UM ICONE DO LADO DO TITULO-->
 </head>
 <body>
-    <h1></h1>
-    
+    <header>
+        <!-- Conteudo do topo-->
+        <h1>DONATE</h1>
+        <h2>Your donation is important</h2>
+        <p>Até 3 vidas com 1 doação.</p>
+        <p>Mais de 38.00 doações são necessárias todos os dias.</p>
+        <p>Apenas 1,9% da população brasileira, doa sangue.</p>    
+        <button>I want help</button>
+    </header>
+
+    <section>
+        <!-- Formulário-->
+    </section>
+
+    <main>
+        <!-- Conteudo central-->
+    </main>
+
+    <footer>
+        <!-- Rodape-->
+    </footer>
 </body>
 </html>
