main and footer html

--- a/index.html
+++ b/index.html
@@ -18,16 +18,39 @@
         <button>I want help</button>
     </header>
 
-    <section>
+    <section class="form">
         <!-- Formulário-->
+        <form action="/" method="">
+            <input type="text" name="name">
+        </form>
     </section>
 
     <main>
         <!-- Conteudo central-->
+        <h2>Last Donors</h2>
+        <section class="donors">
+            <div class="donor">
+                <div class="blood">AB+</div>
+                <p>Igor Dias</p>
+            </div>
+            <div class="donor">
+                <div class="blood">AB+</div>
+                <p>Igor Dias</p>
+            </div>
+            <div class="donor">
+                <div class="blood">AB+</div>
+                <p>Igor Dias</p>
+            </div>
+            <div class="donor">
+                <div class="blood">AB+</div>
+                <p>Igor Dias</p>
+            </div>
+        </section>
     </main>
 
     <footer>
         <!-- Rodape-->
+        With ❤️ NZ
     </footer>
 </body>
 </html>
