--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
 
     <section class="form">
         <!-- Formulário-->
+        <h2>Entre na lista de doadores</h2>
         <form action="/" method="">
-            <input type="text" name="name">
+            <input type="text" name="name" placeholder="Nome Completo">
+            <input type="text" name="email" placeholder="Email">
+            <input type="text" name="blood" placeholder="Tipo Sanguíneo">
+            <button>Quero ajudar</button>
         </form>
     </section>
 
