--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Donate Blood! Donate life!</title>
     <!-- ADICIONAR UM ICONE DO LADO DO TITULO-->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
