--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Donate Blood! Donate life!</title>
     <!-- ADICIONAR UM ICONE DO LADO DO TITULO-->
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
