--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <main>
         <!-- Conteudo central-->
-        <h2>Last Donors</h2>
+        <h2>Last <span>Donors</span></h2>
         <section class="donors">
             <div class="donor">
                 <div class="blood">AB+</div>
