--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <!-- Conteudo do topo-->
-        <h1>DONATE</h1>
+        <img class="logo" src="logo.png" alt="Imagem de DOE">
         <h2>Your donation is important</h2>
         <p>Até 3 vidas com 1 doação.</p>
         <p>Mais de 38.00 doações são necessárias todos os dias.</p>
