--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <button>I want help</button>
     </header>
 
-    <section class="form">
+    <section class="form hide">
         <!-- Formulário-->
         <h2>Entre na lista de doadores</h2>
         <form action="/" method="">
