--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="form hide">
         <!-- Formulário-->
         <h2>Entre na lista de doadores</h2>
-        <form action="/" method="">
+        <form action="/" method="POST">
             <input type="text" name="name" placeholder="Nome Completo">
             <input type="text" name="email" placeholder="Email">
             <input type="text" name="blood" placeholder="Tipo Sanguíneo">
